Apply code formatter